add comments commands to comment out figures and equations

--- a/preamble.tex
+++ b/preamble.tex
@@ -125,6 +125,22 @@ height=21cm,top=3.7cm,headsep=1cm,footskip=1.1cm]{geometry}
 % \usepackage{longtable}        % Allows to break tables through pages
 % \floatsetup[longtable]{margins=centering,LTcapwidth=table}
 
+
+%----------------------------+
+% Packages for spell checkers|
+%----------------------------+
+
+% These allow one to compile the pdf without any figures, equations
+% etc. which will let us copy paste the output for spell checking.
+
+\usepackage{comment}
+\excludecomment{figure}
+\let\endfigure\relax
+\excludecomment{equation}
+\let\endequation\relax
+
+
+
 %---------------------------------------------------------+
 % Miscellaneous packages: lists, setspace, todonotes, etc |
 %---------------------------------------------------------+
@@ -196,7 +212,7 @@ pdfkeywords={machine learning}
 }
 \usepackage[numbered,open,openlevel=1]{bookmark}
 
-\usepackage{amsthm}        % We load theorem environments here to avoid warnings
+\usepackage{amsthm,amsmath}        % We load theorem environments here to avoid warnings
 
 \usepackage[noabbrev,capitalise]{cleveref}
 
