update biber and biblatex to have a first working and correctly commented main thesis

--- a/mybibformat.sty
+++ b/mybibformat.sty
@@ -19,6 +19,7 @@
 giveninits=true,uniquename=init,maxbibnames=99,useprefix=true,sortcites=true,
 isbn=false,url=false}
 
+%giveninits=true,uniquename=init,maxbibnames=99,useprefix=true,sortcites=true,
 %----------------------+
 % Custom field formats |
 %----------------------+
