--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,5 @@
+% !BIB TS-program = biber
+% !BIB program = biber
 %===============================================================================
 %          File: main.tex
 %        Author: Pedro Ferrari
@@ -22,7 +24,7 @@
   \include{preface}
 
 \mainmatter
-  \include{ch1_introduction}
+ % \include{ch1_introduction}
   \include{ch3_machine_learning}
 
 \backmatter
