used online spell checkers for machine learning chapter

--- a/preamble.tex
+++ b/preamble.tex
@@ -222,11 +222,12 @@ pdfkeywords={machine learning}
 % Comment out the math equations, figurest,etc                |
 % This will help us spell checking the doc with online tools |
 %-----------------------------------------------------------+
-\usepackage{comment}
-\excludecomment{figure}
-\let\endfigure\relax
-\excludecomment{equation}
-\let\endequation\relax
+%\usepackage{comment}
+%\excludecomment{figure}
+%\let\endfigure\relax
+%\excludecomment{equation}
+%\let\endequation\relax
+
 %\excludecomment{lstlisting}
 %\let\endlstlisting\relax
 
