--- a/ch3_machine_learning.tex
+++ b/ch3_machine_learning.tex
@@ -259,8 +259,8 @@ where we have used an abuse of notation to absorb $\theta_0$ into $\theta$. Fina
 
 Maximum likelihood is the most common method employed to fit the model. %with multinomial distributions modeling the features.
 Given a parameter $\theta$, the probability of having a target vector $y$ is
-\begin{equation}
 
+\begin{equation}
 P(Y =y \mid \theta )  = \prod_{i=1}^N P(y_1 \in C_1 \mid x_i, \theta)^y_i(1 - P(y_1 \in C_1 \mid x_i, \theta) )^{(1-y_i)}
 \end{equation}
 
@@ -392,24 +392,28 @@ In the generalization error, the loss function  determines how \textit{good} the
 
 By comparing for each sample the target predictions versus their actual values, loss functions give a measure of how strong classifiers are with respect to their predictions. These can be described as semi metrics on the target space i.e. functions that are symmetric, non-negative and equal to zero only if both arguments are equal.
 
-{\huge \textbf{UNCOMMENT PROOFS, DEFINITIONS AND THEOREMS}}
+%{\huge \textbf{UNCOMMENT PROOFS, DEFINITIONS AND THEOREMS}}
 
-%\begin{definition}{Prediction Error}
+\begin{definition}{Prediction Error}
 %\begin{equation}
-% PE(\hat{f})= \Expect_{\textbf{X},\textbf{Y}} \left[ L(Y,\hat{f}(X))\right]
+\[ 
+ PE(\hat{f})= \Expect_{\textbf{X},\textbf{Y}} \left[ L(Y,\hat{f}(X))\right]
+\]
 % \end{equation}
-%\end{definition}
+\end{definition}
 
 This is the expected error between our model and the target labels, as quantified by the loss function.
 
 Given that any model is always built on a dataset, we are required to estimate the prediction error using the model's error over the data.  This value is the generalization error.
 
-%\begin{definition}{Generalization Error}
-% $\mathrm{Ts}$:
+\begin{definition}{Generalization Error}
+ $\mathrm{Ts}$:
 %\begin{equation}
+\[ 
 % Err_{\mathrm{T}} =  \Expect_{\textbf{X},\textbf{Y}} \left[ L(Y,\hat{f}(X)) |  \mathrm{T}\right]
+\]
 % \end{equation}
-%\end{definition}\footnote{Note that in this definition the expectation is taken conditional on the training set and also from which the model is fit.}
+\end{definition}\footnote{Note that in this definition the expectation is taken conditional on the training set and also from which the model is fit.}
 
 The generalization error is also known as the training prediction error. The prediction error is a value very much related to the generalization error as it is its expectation:
 
@@ -1045,7 +1049,6 @@ P_{\textbf{x}, \textbf{y} }(mg(\textbf{x},\textbf{y}) <0)
  It can be shown that, for $K$ sufficiently large, the generalization error under the misclassification loss converges to
 
 \begin{equation}
-
  P_{\textbf{x}, \textbf{y} } ( P_{\Theta} (h(\textbf{x}, \Theta) = \textbf{y}) - max_{j \neq \textbf{y}} P_{\Theta} (h(\textbf{x}, \Theta) = j) < 0) 
  \end{equation}
 
