start playing with ch1 join

--- a/main.tex
+++ b/main.tex
@@ -24,12 +24,12 @@
   \include{preface}
 
 \mainmatter
- % \include{ch1_introduction}
-  \include{ch3_machine_learning}
+  \include{ch1_introduction}
+  %\include{ch3_machine_learning}
 
 \backmatter
-  \printbibheading[heading=bibbook]
-  \bibbysection[heading=subbib]
+	\printbibheading[heading=bibbook]
+	\bibbysection[heading=subbib]
   % \printindex
 
 \end{document}
