--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 
 \mainmatter
   \include{ch1_introduction}
-  %\include{ch3_machine_learning}
+  \include{ch3_machine_learning}
 
 \backmatter
 	\printbibheading[heading=bibbook]
