--- a/ch1_introduction.tex
+++ b/ch1_introduction.tex
@@ -37,7 +37,7 @@ The spatial dissemination of a congenitally transmitted disease sidesteps the av
 
 Mobile phone records contain information about the movements of large subsets of the population of a country, and make them very useful to understand the spreading dynamics of infectious diseases. They have been used to understand the diffusion of malaria in Kenya~\cite{wesolowski2012quantifying} and in Ivory Coast~\cite{enns2013human}, including the refining of infection models~\cite{chunara2013large}. The cited works on Ivory Coast were performed using the D4D (Data for Development) challenge datasets released in 2013. Tizzoni et al.~\cite{tizzoni2014use} compare different mobility models using theoretical approaches, available census data and models based on CDRs interactions to infer movements. They found that the models based on CDRs and mobility census data are highly correlated, illustrating their use as mobility proxies.
 
-Mobile phone data has also been used to predict the geographic spread and timing of Dengue epidemics~\cite{wesolowski2015impact}. This analysis was performed for the country of Pakistan, which is representative of many countries on the verge of countrywide endemic dengue transmission. Other works directly study CDRs to characterize human mobility and other sociodemographic information. A complete survey of mobile traffic analysis articles may be found in~\cite{naboulsi2015mobile}, which also reviews additional studies based on the Ivory Coast dataset mentioned above. %Antenna usage is explored in \cite{sarraute2015socialevents} to automatically detect large social events, using the social graph to infer the probability of attending events.
+Mobile phone data has also been used to predict the geographic spread and timing of Dengue epidemics~\cite{wesolowski2015impact}. This analysis was performed for the country of Pakistan, which is representative of many countries on the verge of countrywide endemic dengue transmission. Other works directly study CDRs to characterize human mobility and other sociodemographic information. A complete survey of mobile traffic analysis articles may be found in~\cite{naboulsi2015mobile}, which also reviews additional studies based on the Ivory Coast dataset mentioned above.
 
 
 In this work, we discuss the use of mobile phone records --also known as Call Detail Records (CDRs)-- for the analysis of mobility patterns and the detection of possible risk zones of Chagas disease in two Latin American countries. Key health expertise on the subject was provided by the \textit{Mundo Sano} Foundation.
@@ -47,15 +47,12 @@ This is the first work that leverages mobile phone data to better understand the
 
 
 
-
-
-\subsection{Chagas Disease in Argentina and Mexico}
+%\subsection{Chagas Disease in Argentina and Mexico}
 
 \subsection{Key Facts and Endemic Zone in Argentina}\label{endemic_zone_argentina}
 
-For more than 50 years, vector control campaigns have been underway in Argentina as the main epidemic counter-measure. The \textit{Gran Chaco}, situated in the northern part of the country,
-% is home to most of the infected triatomines
-is hyperendemic for the disease~\cite{OPS2014mapa}. A map of this ecoregion is shown in Figure~\ref{fig:granchaco}.
+For more than 50 years, vector control campaigns have been underway in Argentina as the main epidemic counter-measure. The \textit{Gran Chaco}, situated in the northern part of the country is home to the disease-carrying triatomines. This region is hyperendemic for the disease~\cite{OPS2014mapa}. A map of this ecoregion is shown in Figure~\ref{fig:granchaco}.
+
 The ecoregion's low socio-demographic conditions further support the parasite's lifecycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among rural and poor areas.
 % The ecoregion as of today is hyperendemic for the disease.
 This region is considered as the endemic zone $E_Z$ in the analysis described in Section~\ref{methods} and Section~\ref{results}.
@@ -135,6 +132,9 @@ Therefore, as in the Argentinian case, the study of long-term mobility is crucia
 
 
 
+
+
+
 \section{Mobile Phone Data Sources}
 
 Our data source is anonymized traffic information from two mobile operators, in Argentina and in Mexico.
@@ -162,7 +162,7 @@ The Argentinian dataset contains CDRs collected over a period of 5 months, from 
 % \paragraph{Mexico.} 
 The Mexican data source is an anonymized dataset from a national mobile phone operator. Data is available for every call made within a period of 24 months from January 2014 to December 2015. The raw logs contain between 11 and 30 million calls per day for more than 8 million users that accessed the telecommunication company's (\textit{telco}) network to place the call. This means that users from other companies are logged, as long as one of the users registering the call is a client of the operator. In practice, we only considered CDRs between users in $\calN_C$ since geolocalization was only possible for this group.
 
-% Information logged for each call included the duration and timestamp of the call, the users participating in the call and the antenna id that transmitted the call to the TelCo client. 
+ Information logged for each call included the duration and timestamp of the call, the users participating in the call and the antenna id that transmitted the call to the TelCo client. 
 
 
 % \subsection{Data Limitations}
@@ -210,7 +210,6 @@ whereas in the case of Mexico, we used the region described in Section~\ref{ende
 
 
 
-% Reviewed up to here
 \subsection{Heatmap Generation}
     With the collected data, we generated heatmaps to visualize the mentioned antenna indicators, overlapping these heatmaps with political maps of the region taken for study.
     
@@ -360,7 +359,7 @@ For space reasons, we don't provide here more specific visualizations and analys
 
 \section{Prediction of Long-term Migrations} \label{long_term}
 
-In this section, we describe ongoing work on the prediction of long-term mobility.
+In this section, we describe the work on the prediction of long-term mobility.
 The CDR logs available for Argentina span a period of 5 months, 
 whereas the Mexican dataset includes 24 months, from January 2014 to December 2015, making it more suitable for this study.
 
@@ -444,8 +443,7 @@ The model consists of the following features, which can be classified in 4 categ
 \subsubsection{Used and home antennas.}\label{homeantenna}
 
 For each user $u \in \calN_C$, we register the top ten most used antennas, during each month of the training period,
-together with the number of calls made through each antenna. 
-% Tag all users having their home antenna in the epidemic region as \textit{EPIDEMIC}. 
+together with the number of calls made through each antenna. We tag all users having their home antenna in the epidemic region as \textit{EPIDEMIC}. 
 %Which 10 antennas does a user use most during each month of the training month interval? 
 %
 %How many calls have been made through each antenna? 
@@ -469,16 +467,21 @@ We register the mobility diameter of each user, as the diameter of the convex hu
 
 \subsubsection{Graph data and communications.}
 
-%\begin{description}
-%    \item [Neighbors.] From the social graph built from the CDRs we extracted the total count of neighbors in the communication graph and the total count of epidemic neighbors. 
-%    \item [Calls.] For each month, the total time and count of monthly calls made during is aggregated per user. This information is also segmented according to the hour of the day that the calls were made and whether they were made during the weekends. Special care was taken with calls placed to and from vulnerable users and aggregated accordingly.
-%\end{description}
+
+
 
 We look at the social graph $\calG_C$ built from the CDRs, and the communications between nodes in $\calN_C$.
 
 	For each edge $\left< n_i, n_j \right> \in \calE_C$, we dive into each of their interactions, segmenting call data with different criteria. For %\textbf{each} 
 	each month and each pair of users $\left< i,j \right>$, we gather the tuple $\left< time_{ij}, calls_{ij}, dir, period \right>$ where $time$ is the sum of all calls (in seconds), $calls$ is the number of calls exchanged, $dir$ is a boolean variable indicating whether the calls were incoming or outgoing (from user $i$'s point of view) and $period$ corresponds to a segmentation of the week into the periods \textit{weekday}, \textit{weeknight}, and \textit{weekend}.
 
+
+In this sense, two users $u_i, u_j \in \calN_C, u_i \neq uj$ are \textbf{neighbors} in the social graph if $time_{ij} > 0$.
+
+%\begin{description}
+%    \item [Neighbors.] From the social graph built from the CDRs we extracted the total count of neighbors in the communication graph and the total count of epidemic neighbors. 
+%    \item [Calls.] For each month, the total time and count of monthly calls made during is aggregated per user. This information is also segmented according to the hour of the day that the calls were made and whether they were made during the weekends. Special care was taken with calls placed to and from vulnerable users and aggregated accordingly.
+%\end{description}
 
 %if we find that user $j$ is epidemic. This may be translated as the edge is vulnerable if one of both users is epidemic.
 
@@ -547,8 +550,7 @@ between $T_0$ and $T_1$, whereas 41,281 had a change.
 
 % Confusion matrix
 Table~\ref{tab:changes} 
-shows the matrix of changes $C$, such that $C_{i, j}$ is the number of users that were in group $i$ during period $T_0$ (the past) and moved to group $j$ during the training period $T_1$. 
-% For example, lower left means was endemic, is now not endemic. % viceversa upper right. 
+shows the matrix of changes $C$, such that $C_{i, j}$ is the number of users that were in group $i$ during period $T_0$ (the past) and moved to group $j$ during the training period $T_1$. As an example, lower left means was endemic, is now not endemic. 
 
 \begin{table}[ht]
 \caption{Matrix of endemicity change}
@@ -742,11 +744,10 @@ The mobility and social information extracted from CDRs analysis has been shown 
 \begin{description}
     \item [Results validation.] Compare against actual serology or disease prevalence surveys. Data collected from fieldwork could be fed to the algorithm in order to supervise the learning. 
     
-    \item [Differentiating rural antennas from urban ones.] This is important as rural areas have conditions which are more vulnerable to the disease expansion. \textit{Trypanosoma cruzi} transmission is favored by rural housing materials and domestic animals contribute to complete the parasite's lifecycle.
-%     Antennas could be automatically tagged as rural by analyzing the differences between the spatial distribution of the antennas in each area. Another goal could be to identify precarious settlements within urban areas, with the help of census data sources.
+    \item [Differentiating rural antennas from urban ones.] This is important as rural areas have conditions which are more vulnerable to the disease expansion. \textit{Trypanosoma cruzi} transmission is favored by rural housing materials and domestic animals contribute to complete the parasite's lifecycle. Antennas could be automatically tagged as rural by analyzing the differences between the spatial distribution of the antennas in each area. A similar goal could be to identify precarious settlements within urban areas, with the help of census data sources.
 
     \item [Seasonal migration analysis.] Experts from the \textit{Mundo Sano} Foundation underlined that many seasonal migrations occur in the \textit{Gran Chaco} region. 
-%     Workers might leave the endemic area for several months possibly introducing the parasite to foreign populations.
+    Workers might leave the endemic area for several months possibly introducing the parasite to foreign populations.
       The analysis of these movements can give information on which communities have a high influx of people from the endemic zone.
     %\item Add more regions to the analysis.
 
