--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,10 @@
 
 \mainmatter
   \include{ch1_introduction}
+	\include{ch2_descriptions_risk}
   \include{ch3_machine_learning}
+  \include{ch4_evaluation_results}  
+  	\include{ch5_conclusion}
 
 \backmatter
 	\printbibheading[heading=bibbook]
